force-app/main/default/objects/Guest_Reservation2__c/Guest_Reservation2__c.object-meta.xml
<CustomObject>
    <label>Guest Reservation2</label>
    <nameField>
        <displayFormat>B-{00}</displayFormat>
        <label>Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Guest Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>