force-app/main/default/objects/Guest_Reservation2__c/fields/Guest2__c.field-meta.xml
<CustomField>
    <fullName>Guest2__c</fullName>
    <label>Guest2</label>
    <referenceTo>Guest2__c</referenceTo>
    <relationshipLabel>Guest Reservations</relationshipLabel>
    <relationshipName>Guest_Reservations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>