force-app/main/default/objects/Guest_Reservation2__c/fields/Hospitality__c.field-meta.xml
<CustomField>
    <fullName>Hospitality__c</fullName>
    <label>Hospitality</label>
    <referenceTo>Hospitality2__c</referenceTo>
    <relationshipLabel>Guest Reservations</relationshipLabel>
    <relationshipName>Guest_Reservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>