force-app/main/default/objects/Guest_Reservation2__c/fields/Is_Corparate_Discaunt_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Corparate_Discaunt_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Corparate Discaunt Applicable?</label>
    <type>Checkbox</type>
</CustomField>