force-app/main/default/objects/Guest_Reservation2__c/fields/Is_Member_Discount_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_Member_Discount_Applicable__c</fullName>
    <formula>IF( Guest2__r.Has_Subscription__c  = True, &quot;True&quot;,
IF( Guest2__r.Has_Subscription__c = False, &quot;False&quot;,
&quot;False&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Member Discount Applicable?</label>
    <type>Text</type>
</CustomField>